<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menuitem_loginRegister"
        android:title="@string/title_login_register"
        android:icon="@android:drawable/ic_menu_add">
    </item>    
    <item
        android:id="@+id/menuitem_variety"
        android:title="@string/title_variety"
        android:icon="@android:drawable/ic_menu_preferences">
    </item>
    <item
        android:id="@+id/menuitem_rating"
        android:title="@string/title_rating"
        android:icon="@android:drawable/ic_menu_help">
    </item>
    <item
        android:id="@+id/menuitem_location"
        android:title="@string/title_location"
        android:icon="@android:drawable/ic_menu_help">
    </item>
</menu>
