<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:isScrollContainer="true"
    android:layout_height="fill_parent" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="@dimen/activity_margin"
	    tools:context=".HomeActivity" >

    	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/title_register"
	        android:textSize="@dimen/heading1"
	        android:textColor="@color/heading1"
	        android:paddingBottom="@dimen/seperator" />
    		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/first_name"
	        android:textSize="@dimen/heading1"
	        android:textColor="@color/heading1"
	        android:paddingBottom="@dimen/seperator" />
	    
	    <EditText
		        android:id="@+id/edittext_fname"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPersonName" />
	    
	    <TextView
	        android:id="@+id/TextView_LastNameP2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/last_name"
	        android:textSize="@dimen/heading1"
	        android:textColor="@color/heading1"
	        android:paddingBottom="@dimen/seperator" />
	    
	    <EditText
		        android:id="@+id/edittext_lname"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPersonName" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/city_state"
	        android:textSize="@dimen/heading1"
	        android:textColor="@color/heading1"
	        android:paddingBottom="@dimen/seperator" />
	    
	    <EditText
		        android:id="@+id/edittext_city_state"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPersonName" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dob"
	        android:textSize="@dimen/heading1"
	        android:textColor="@color/heading1"
	        android:paddingBottom="@dimen/seperator" />
	    
	    <DatePicker
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />

	    <Button
		    android:id="@+id/Button_profile_submit"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_profile_submit"
		    android:paddingBottom="@dimen/seperator" />
	    
	</LinearLayout>
</ScrollView>