<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:isScrollContainer="true"
    android:layout_height="fill_parent" >

    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="@dimen/activity_margin">
    
    	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/title_login_register"
	        android:textSize="@dimen/heading1"
	        android:textColor="@color/heading1"
	        android:paddingBottom="@dimen/seperator" />
	    
	    <Button
		    android:id="@+id/Button_Login"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_login"/>
    			    
	    <Button
		    android:id="@+id/Button_Register"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_register"
		    android:paddingBottom="@dimen/seperator" />
    </LinearLayout>
</ScrollView>